tests/errors/undefined_function.js
// Error: Calling undefined function
function undefined_function() {
  let x = foo(5);
  return x;
}

undefined_function();
